--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_50opacity">#80FFFFFF</color>
+    <color name="pg_color">#191926</color>
+    <color name="name">#ECECEC</color>
+    <color name="tag">#FF3466</color>
+    <color name="reviews">#6D6D80</color>
+    <color name="storyline_head">#ECECEC</color>
+    <color name="storyline">#BFFFFFFF</color>
+    <color name="cast_text">#D8D8D8</color>
+
 </resources>
